feat: adding page components into the repository

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,14 @@
+@import 'helpers/_include-media';
+
+
+html, body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
 // ---- Auto-generated: Delete me! ----
 $home-page-code-font: monospace;
 
@@ -5,6 +16,20 @@ $home-page-code-font: monospace;
   display: flex;
   height: 100%;
   flex-direction: column;
+  min-height: 500px;
+  margin: 0 auto 20px auto;
+  width: 95%;
+  padding: 10px 20px;
+  background: #fff;
+  position: relative;
+
+  @include media('>=tablet') {
+    width: 500px;
+  }
+
+  @include media('>=desktop') {
+    width: 900px;
+  }
 
   &.is-1-column {
     flex-direction: column;
@@ -24,6 +49,6 @@ $home-page-code-font: monospace;
   .home-page-code {
     font-family: $home-page-code-font;
   }
-
 }
+
 // ---- [end] Auto-generated: Delete me! ----
