--- a/index.ejs
+++ b/index.ejs
@@ -6,24 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title><%= htmlWebpackPlugin.options.title %></title>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-  <style>
-    body {
-      position: relative;
-      font-family: OpenSans,Helvetica Neue,Helvetica,Tahoma,Arial,FreeSans,sans-serif;
-      background: #F7F7F7;
-
-      &::before {
-        position: fixed;
-        top: 0;
-        left: 0;
-        display: block;
-        padding: 5px;
-        font-weight: bold;
-        background-color: gray;
-        pointer-events: none;
-      }
-    }
-  </style>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700" rel="stylesheet">
 </head>
 <body>
   <div id="app">
